# aurora

./: .gitignore  README.md  flake.nix
.github/workflows/: rust.yaml
backend/: .gitignore  Cargo.toml
backend/services/api/: Cargo.toml
backend/services/api/src/: main.rs
backend/services/api/src/v1/: error.rs  mod.rs  token.rs
backend/services/api/src/v1/routes/: auth.rs
docker/: compose.yml
web/: .eslintrc.js  components.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.lib.json  tsconfig.node.json  tsconfig.web.json  webpack.config.js
web/src/app/: App.tsx  index.html  index.tsx
web/src/components/: theme-provider.tsx
web/src/components/ui/: button.tsx  form.tsx  index.tsx  label.tsx  timeago.tsx
web/src/electron/: index.html
web/src/electron/main/: index.ts
web/src/lib/: utils.ts
web/webpack/: common.js  electron.js  web.js
