[package]
name = "aurora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
