[package]
name = "aurora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros", "http2", "multipart", "ws"] }
base64 = "0.21.7"
const_format = "0.2.32"
dotenv = "0.15.0"
hex-literal = "0.4.1"
hmac = "0.12.1"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
thiserror = "1.0.56"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
